; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-decl.c_push_file_scope.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/gcc/extr_c-decl.c_push_file_scope.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@file_scope = common dso_local global i64 0, align 8
@current_scope = common dso_local global i64 0, align 8
@visible_builtins = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @push_file_scope() #0 {
  %1 = alloca i64, align 8
  %2 = load i64, i64* @file_scope, align 8
  %3 = icmp ne i64 %2, 0
  br i1 %3, label %4, label %5

4:                                                ; preds = %0
  br label %22

5:                                                ; preds = %0
  %6 = call i32 (...) @push_scope()
  %7 = load i64, i64* @current_scope, align 8
  store i64 %7, i64* @file_scope, align 8
  %8 = call i32 (...) @start_fname_decls()
  %9 = load i64, i64* @visible_builtins, align 8
  store i64 %9, i64* %1, align 8
  br label %10

10:                                               ; preds = %19, %5
  %11 = load i64, i64* %1, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %22

13:                                               ; preds = %10
  %14 = load i64, i64* %1, align 8
  %15 = call i32 @DECL_NAME(i64 %14)
  %16 = load i64, i64* %1, align 8
  %17 = load i64, i64* @file_scope, align 8
  %18 = call i32 @bind(i32 %15, i64 %16, i64 %17, i32 0, i32 1)
  br label %19

19:                                               ; preds = %13
  %20 = load i64, i64* %1, align 8
  %21 = call i64 @TREE_CHAIN(i64 %20)
  store i64 %21, i64* %1, align 8
  br label %10

22:                                               ; preds = %4, %10
  ret void
}

declare dso_local i32 @push_scope(...) #1

declare dso_local i32 @start_fname_decls(...) #1

declare dso_local i32 @bind(i32, i64, i64, i32, i32) #1

declare dso_local i32 @DECL_NAME(i64) #1

declare dso_local i64 @TREE_CHAIN(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
